<resources>
    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello World!</string>
    <string name="name_and_date">Ariunzaya Erdenebileg 4/19/2022</string>
    <string name="Input_name">Please input your name</string>
    <string name="email_address">Please input your email address</string>
    <string name="please_input_your_username">Please input your username</string>
    <string name="submit">submit</string>
    <string name="email_address_error">You put wrong email address format</string>
    <string name="forgot_data_error">You forgot to input some data on the form</string>
    <string name="thanks_text">\"Thank you for signing up \"</string>
    <string name="exclam">!</string>
    <string name="eighteen_error">You are under eighteen years old.</string>
    <string name="select_your_date_of_birth">Select your date of birth</string>
    <string name="date">date</string>
    <string name="back">Back</string>
    <string name="slash">/</string>
    <string name="zayas_dog">Zaya\'s Dog</string>
    <string name="back_button">Back</string>
    <string name="input_your_occupation">Input your occupation</string>
    <string name="input_your_description">Input your description</string>
    <string name="fragment_match">fragment match</string>
    <string name="fragment_settings">fragment settings</string>
    <string name="fragment_profile">fragment profile</string>
    <string name="profile">profile</string>
    <string name="matches">matches</string>
    <string name="settings">settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="age">age</string>
    <string name="backButton">backButton</string>
    <string name="this_is_zaya_s_dog">This is Zaya\'s dog</string>

    <string name="melvin">Melvin</string>
    <string name="Kind_boy">Such a sweet boy</string>
    <string name="image_of_the_match">Image of the match</string>
    <string name="like">Like</string>
    <string name="liked_message">You liked: %s</string>

    <string name="pick_your_daily_reminder_time">Pick your daily reminder time</string>
    <string name="set_your_maximum_distance_search_in_miles">Set your maximum distance search (in miles)</string>
    <string name="select_your_gender_preference">Select your gender preference</string>
    <string name="select_your_privacy_option">Select your privacy option</string>
    <string name="set_your_interested_age_range">Set your interested age range</string>
    <string name="select_time">Select time</string>
    <string name="selected_time">Selected time:</string>
    <string name="type_your_distance_in_miles">Enter your distance in miles</string>
    <string name="he_him">He/Him</string>
    <string name="she_her">She/Her</string>
    <string name="they_them">They/Them</string>
    <string name="prefer_not_to_answer">Prefer not to answer</string>
    <string name="private_radio">Private</string>
    <string name="public_radio">Public</string>
    <string name="selected_time_message">Selected time: %d:%s</string>
    <string name="select_reminder_time_title">Select Reminder Time</string>
    <string name="save">Save</string>
    <string name="invalid_settings">You have inputted invalid settings</string>

    <string name="started_location_updates">Started Location Updates</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Please turn on your location services to use this feature</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>


</resources>