<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/profile_menu_item"
        android:title="@string/profile"
        android:checked="true" />
    <item
        android:id="@+id/matches_menu_item"
        android:title="@string/matches" />
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings" />
</group>
</menu>