<?xml version="1.0" encoding="utf-8"?>
<resources>
<array name="initialValuesForSlider">
    <item>25</item>
    <item>50</item>
</array>
</resources>